--- a/src/app/pages/company/company.component.html
+++ b/src/app/pages/company/company.component.html
@@ -113,7 +113,7 @@
                             <div class="download">
                                 <h2 class="download-title">IOS</h2>
                                 <img class="download-img" src="/assets/images/ui-assets/apple.png" />
-                                <a class="left-image-text-btn download-btn" href="javascript:void(0);">Download<img src="/assets/images/ui-assets/arrow-white.png"/></a>
+                                <a class="left-image-text-btn download-btn sam" href="javascript:void(0);">Download<img src="/assets/images/ui-assets/arrow-white.png"/></a>
     
                             </div>
     
