--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -69,7 +69,7 @@
                       <div class="example-collection-cell _1of2">
                         <div class="example-collection-item right-four" >
                           <div class="right-header-content">
-                            <a class="right-image-text-btn" href="javascript:void(0);">Create with us <img src="/assets/images/ui-assets/arrow-white.png"/></a>
+                            <a class="right-image-text-btn" href="javascript:void(0);">Explore Venues  <img src="/assets/images/ui-assets/arrow-white.png"/></a>
                           </div>
                         </div>
                       </div>
@@ -78,14 +78,14 @@
                         <div class="example-collection-cell _1of2">
                             <div class="example-collection-item right-three" >
                                 <div class="right-header-content">
-                                    <a class="right-image-text-btn" href="javascript:void(0);">Explore Memberships <img src="/assets/images/ui-assets/arrow-white.png"/></a>
+                                    <a class="right-image-text-btn" href="javascript:void(0);"> Explore Drops <img src="/assets/images/ui-assets/arrow-white.png"/></a>
                                    </div>
                             </div>
                         </div>
                       <div class="example-collection-cell _1of2">
                         <div class="example-collection-item right-one">
                           <div class="right-header-content">
-                            <a class="right-image-text-btn" href="javascript:void(0);">Explore Venues <img src="/assets/images/ui-assets/arrow-white.png"/></a>
+                            <a class="right-image-text-btn" href="javascript:void(0);">Explore Memberships <img src="/assets/images/ui-assets/arrow-white.png"/></a>
                           </div>
                         </div>
                       </div>
@@ -114,19 +114,24 @@
                     <div class="example-collection-grid nested">
                         <div class="example-collection-cell ">
                             <div class="example-collection-item simulation-2" >
-                                <div class="simulation-content-2">
+                                <div class="gradient">
+                                        <div class="simulation-content-2">
                                     <p class="paragraph">COMING SOON · may 31</p>
                                     <h3 class="h3">Shantell Martin</h3>
                                     <p class="paragraph">ART GALLERY · CENTER STAGE</p>
+                                </div>
                                 </div>
                             </div>
                         </div>
                         <div class="example-collection-cell ">
                             <div class="example-collection-item simulation-3" >
+                                <div class="gradient">
+                                
                                 <div class="simulation-content-2">
                                     <p class="paragraph">COMING SOON · may 31</p>
                                     <h3 class="h3">Neon Dreams</h3>
                                     <p class="paragraph">NFT DROP · CENTER STAGE</p>
+                                </div>
                                 </div>
                             </div>
                         </div>
@@ -139,10 +144,13 @@
             <ng-template class="example-collection-grid" carouselSlide>
                 <div class="example-collection-cell">
                     <div class="example-collection-item what-happen" >
-                        <div class="simulation-content ">
+                        <div class="gradient">
+                                
+                        <div class="simulation-content">
                             <p class="paragraph">Started AUG 12</p>
                             <h3 class="h3">Muse: Enter The Simulation</h3>
                             <p class="paragraph">CONCERT · STAGEVERSE STADIUM</p>
+                        </div>
                         </div>
                     </div>
             </div>
@@ -183,9 +191,11 @@
             <ng-template class="example-collection-grid" carouselSlide>
                 <div class="example-collection-cell">
                     <div class="slide example-collection-item muse" >
+                        <div class="gradient-2">
                         <div class="simulation-content-venues">
                             <p class="h3">Center Stage</p>
                         </div>
+                    </div>
                     </div>
             </div>
             </ng-template>
@@ -193,8 +203,10 @@
                 <div class="example-collection-cell">
 
                     <div class="slide example-collection-item muse-2" >
+                        <div class="gradient-2">
                         <div class="simulation-content-venues">
                             <p class="h3">Stageverse Stadium</p>
+                        </div>
                         </div>
 
                     </div>
@@ -390,7 +402,7 @@
                 <a href="#" > <img src="/assets/images/ui-assets/ios-btn.png" class="download-img-btn" /></a>
                 <a href="#" ><img src="/assets/images/ui-assets/android-btn.png" class="download-img-btn" /></a>
                 <a href="#" ><img src="/assets/images/ui-assets/quest-btn.png" class="download-img-btn" /></a>
-                <h2 class="donwnload-sub-text">comming soom to mac and pc</h2>
+                <h2 class="donwnload-sub-text">comming soon</h2>
             </div>
         </div>
         <div>
@@ -480,12 +492,12 @@
                                 <p style="font-size: 1.9vh;">By signing up you are agreeing to the Stageverse <a routerLink="/terms-of-service" class="links-a" style="text-decoration: underline;">Terms of Service</a> and Stageverse <a routerLink="/privacy" class="links-a" style="text-decoration: underline;">Privacy Policy</a>. You may unsubscribe at any time.</p>
 
                             </div>
-                            <div class="social-media-footer-container">
-                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/instagram.png" alt="instagram icon"></a>
-                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/panda.png" alt="social icon"></a>
-                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/linkedIn.png" alt="linkedIn icon"></a>
-                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/twitter.png" alt="twitter icon"></a>
-
+                            <div class="social-media-footer-container ali">
+                                <a href="https://www.instagram.com/stageverse" target="blank" class="social-media-footer links-a"><img src="assets/images/ui-assets/instagram.png" alt="instagram icon"></a>
+                                <a href=" https://discord.com/invite/uhMjf7sF6Z" target="blank" class="social-media-footer links-a"><img src="assets/images/ui-assets/panda.png" alt="social icon"></a>
+                                <a href="https://www.linkedin.com/company/stageverse" target="blank" class="social-media-footer links-a"><img src="assets/images/ui-assets/linkedIn.png" alt="linkedIn icon"></a>
+                                <a href="https://twitter.com/thestageverse" target="blank" class="social-media-footer links-a"><img src="assets/images/ui-assets/twitter.png" alt="twitter icon"></a>
+                                <a href="#" class="social-media-footer links-a"><img src="assets/images/ui-assets/Frame1846.svg" alt="twitter icon"></a>
                             </div>
                         </div>
                     </div>
