--- a/src/app/pages/muse/components/muse/muse.component.html
+++ b/src/app/pages/muse/components/muse/muse.component.html
@@ -350,7 +350,7 @@
                         <mat-expansion-panel [expanded]="true">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                            <h2 class="faq-heading">This is a question?</h2>
+                            <h2 class="faq-heading">What is Muse: Enter The Simulation?</h2>
                             </mat-panel-title>
                             <!-- <mat-panel-description>
                             Type your name and age
@@ -362,7 +362,7 @@
                         <mat-expansion-panel>
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                            <h2 class="faq-heading">This is a question?</h2>
+                            <h2 class="faq-heading">Do I need to pay to attend?</h2>
                             </mat-panel-title>
                             <!-- <mat-panel-description>
                             Type your name and age
@@ -374,7 +374,7 @@
                         <mat-expansion-panel>
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                            <h2 class="faq-heading">This is a question?</h2>
+                            <h2 class="faq-heading">Is this the full Simulation Theory show?</h2>
                             </mat-panel-title>
                             <!-- <mat-panel-description>
                             Type your name and age
@@ -386,7 +386,7 @@
                         <mat-expansion-panel>
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                            <h2 class="faq-heading">This is a question?</h2>
+                            <h2 class="faq-heading">Is it the same show each time?</h2>
                             </mat-panel-title>
                             <!-- <mat-panel-description>
                             Type your name and age
@@ -394,7 +394,11 @@
                         </mat-expansion-panel-header>
                     
                        <p class="faq-text">This is a mixed reality experience of the Simulation Theory world tour, captured at the sold out Madrid’s Wanda Metropolitano Stadium. You can meet up with friends and fellow fans at the Muse virtual venue in the Stageverse as avatars, and experience the show from over 17 different viewpoints around the stadium. </p>
-                        </mat-expansion-panel>
+                        
+                    </mat-expansion-panel>
+                    <div class="m-t-20">
+                        <a class="white-btn" href="javascript:void(0);">See all FAQS <img class="btn-arrow" src="assets/images/ui-assets/black-arrow.png" /></a>
+                    </div>
                         <!-- <mat-expansion-panel (opened)="panelOpenState = true"
                                             (closed)="panelOpenState = false">
                         <mat-expansion-panel-header>
@@ -409,12 +413,12 @@
                         </mat-expansion-panel> -->
                     </mat-accordion>
                 </div>
-                <div class="flex-1 faq-box-padding">
+                <div class="flex-1 faq-box-padding sym">
                     <mat-accordion>
                         <mat-expansion-panel>
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                            <h2 class="faq-heading">This is a question?</h2>
+                            <h2 class="faq-heading">Can I attend the show with firends?</h2>
                             </mat-panel-title>
                             <!-- <mat-panel-description>
                             Type your name and age
@@ -426,7 +430,7 @@
                         <mat-expansion-panel>
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                            <h2 class="faq-heading">This is a question?</h2>
+                            <h2 class="faq-heading">If I live outside the US can I still attend?</h2>
                             </mat-panel-title>
                             <!-- <mat-panel-description>
                             Type your name and age
@@ -438,7 +442,7 @@
                         <mat-expansion-panel>
                         <mat-expansion-panel-header>
                             <mat-panel-title>
-                            <h2 class="faq-heading">This is a question?</h2>
+                            <h2 class="faq-heading">How do i get a Muse or balmain avatar?</h2>
                             </mat-panel-title>
                             <!-- <mat-panel-description>
                             Type your name and age
